k8s/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: padelgo-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: padelgo-api
  template:
    metadata:
      labels:
        app: padelgo-api
    spec:
      serviceAccountName: padelgo-app-sa
      containers:
        - name: padelgo-api
          image: dhia78/padelgo-api:1.0.0
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          readinessProbe:
            httpGet:
              path: /api/health
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 10
