k8s/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: padelgo-api-service
spec:
  selector:
    app: padelgo-api
  ports:
    - name: http
      port: 3000
      targetPort: 3000
