k8s/ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: padelgo-ui-service
spec:
  selector:
    app: padelgo-ui
  ports:
    - name: http
      port: 80
      targetPort: 80
