k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: padelgo-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "false"
spec:
  ingressClassName: nginx
  rules:
    - host: padelgo.local
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: padelgo-api-service
                port:
                  number: 3000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: padelgo-ui-service
                port:
                  number: 80
